# osress

./: .gitignore  LICENSE.md  Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py
docs/source/: conf.py  index.rst
osress/: __init__.py  config.py
tests/: test_config.py
