[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:README.rst]
search = version number: {current_version}
replace = version number: {new_version}

[bumpversion:file:osress/version.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal=0

[metadata]
description-file=README.rst

[flake8]
exclude = docs

[aliases]
test=pytest
